@@ -1,7 +1,7 @@
 usage: uncat [-vo] [-t timeout] [-s size] prog
 
 1
-$Id: 5885dd2051467fd6c89a8cba13b05692f1c888af $
+$Id: 3f1e4209ad183dfa61599248a24ecba4e253ead3 $
 
 usage: uncat [-vo] [-t timeout] [-s size] prog
 
